--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
 		"eslint": "^6.3.0",
 		"eslint-loader": "^3.0.0",
 		"html-webpack-plugin": "^3.2.0",
+		"jquery": "^3.4.1",
 		"style-loader": "^1.0.0",
 		"uglifyjs-webpack-plugin": "^2.2.0",
 		"webpack": "4.39.3",
